@@ -1,0 +1,7 @@
+Important NEWS for psmisc package
+
+The command line for killall has changed significantly so it is more in
+line with other programs.  To specify signals use the -s flag.
+EG before version 20 you would do killall -HUP 123 now do
+killall -s HUP 123
+
